force-app/main/default/objects/sma__MACustomAction__c/sma__MACustomAction__c.object-meta.xml
<CustomObject>
    <label>MapAnything Custom Action</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Custom Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>