force-app/main/default/objects/sma__MACustomAction__c/fields/sma__Action__c.field-meta.xml
<CustomField>
    <fullName>sma__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Iframe</fullName>
            </value>
            <value>
                <fullName>Javascript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>