force-app/main/default/objects/sma__MACustomAction__c/fields/sma__ActionValue__c.field-meta.xml
<CustomField>
    <fullName>sma__ActionValue__c</fullName>
    <label>Action Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>