force-app/main/default/objects/sma__MACustomAction__c/fields/sma__Modes__c.field-meta.xml
<CustomField>
    <fullName>sma__Modes__c</fullName>
    <label>Modes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>