force-app/main/default/objects/sma__MACustomAction__c/fields/sma__Options__c.field-meta.xml
<CustomField>
    <fullName>sma__Options__c</fullName>
    <defaultValue>&quot;{method:&apos;GET&apos;,addRecords:false}&quot;</defaultValue>
    <label>Options</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>