force-app/main/default/objects/sma__MACustomAction__c/fields/sma__Requirements__c.field-meta.xml
<CustomField>
    <fullName>sma__Requirements__c</fullName>
    <label>Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activity Support</fullName>
            </value>
            <value>
                <fullName>Verified Location Support</fullName>
            </value>
            <value>
                <fullName>Contact Or Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>