force-app/main/default/objects/sma__MACustomAction__c/fields/sma__Type__c.field-meta.xml
<CustomField>
    <fullName>sma__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>Standard Action</fullName>
            </value>
            <value>
                <fullName>Custom Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>